# frappe-training

apptest/: README.md  pyproject.toml
apptest/.github/workflows/: ci.yml
apptest/.gitt/: index
apptest/.gitt/logs/: HEAD
apptest/.gitt/logs/refs/heads/: develop
apptest/.gitt/refs/heads/: develop
apptest/apptest/: hooks.py  modules.txt
apptest/apptest/programming_module/doctype/client_side_scripting/: client_side_scripting.js  client_side_scripting.json  client_side_scripting.py  test_client_side_scripting.py
apptest/apptest/programming_module/doctype/doctype_test_1/: doctype_test_1.js  doctype_test_1.json  doctype_test_1.py  test_doctype_test_1.py
apptest/apptest/programming_module/doctype/doctype_test_2/: doctype_test_2.js  doctype_test_2.json  doctype_test_2.py  test_doctype_test_2.py
apptest/apptest/programming_module/doctype/famliy_member/: famliy_member.json  famliy_member.py
apptest/apptest/programming_module/doctype/test_module/: test_module.js  test_module.json  test_module.py  test_test_module.py
apptest/apptest/programming_module/workspace/programming_workspace/: programming_workspace.json
apptest/apptest/programming_module/workspace/test_2/: test_2.json
apptest/apptest/test_apps/doctype/programming_module/: programming_module.js  programming_module.json  programming_module.py  test_programming_module.py
apptest/apptest/test_apps/workspace/programming_workspace/: programming_workspace.json
demo_app/: README.md  pyproject.toml
demo_app/demo_app/: hooks.py
erpnext/.gitt/: config  index  packed-refs  shallow
frappe/.gitt/: HEAD  (+5 more)
(+34 files in other folders)
